@@ -14,6 +14,10 @@ unreleased
   with collective.celery tasks.
   [JL 2019-02-28]
 
+- #2610885: Remove sleep and restore retry on POSKeyError
+  [JL 2019-03-05]
+
+
 2.0.4 (2017-12-18)
 ------------------
 
